--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,12 +1,21 @@
 <div class="container">
+  <form class="form-signin" method="post" action="/login/login">
 
-  <form class="form-signin" action="/login/login">
+
     <h1 class="form-signin-heading">Coolpay portal</h1>
     <h3 class="form-signin-heading">Please sign in</h3>
+
+    <% if @login_failed %>
+    <div class="alert alert-danger" role="alert">
+      Invalid username or key
+    </div>
+    <% end %>
+
     <label for="inputEmail" class="sr-only">User Name</label>
-    <input type="text" id="inputEmail" class="form-control" placeholder="User Name" required autofocus>
+    <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+    <input type="text" name="username" id="inputEmail" class="form-control" placeholder="User Name" required autofocus>
     <label for="inputPassword" class="sr-only">Key</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Key" required>
+    <input type="password" name="key" id="inputPassword" class="form-control" placeholder="Key" required>
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
