--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -12,8 +12,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Recipents</a></li>
-        <li><a href="#">Payments History</a></li>
+        <li><a href="/recipients/index">Recipents</a></li>
+        <li class="active"><a href="/payments/index">Payments History</a></li>
       </ul>
      
       <ul class="nav navbar-nav navbar-right">
