--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -18,6 +18,6 @@
      
       <ul class="nav navbar-nav navbar-right">
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
