--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -12,8 +12,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/recipients/index">Recipents</a></li>
-        <li class="active"><a href="/payments/index">Payments History</a></li>
+        <li class="active"><a href="/recipients/index">Recipents</a></li>
+        <li><a href="/payments/index">Payments History</a></li>
       </ul>
      
       <ul class="nav navbar-nav navbar-right">
@@ -23,18 +23,12 @@
 </nav>
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h2 class="pull-right"><a class="btn btn-success" href="/recipients/new">Add Recipient</a></h2>
-      <h2>Payments History</h2>
-      <ul class="list-group">
-        <% if @payments != nil %>
-        <% @payments.each do |payment| %>
-        <li class="list-group-item">
-          <span class="pull-right">
-            <a class="btn btn-primary btn-xs" href="#<%= recipient.id %>">Pay</a>
-          </span>
-        </li>
-        <% end %>
-        <% end %>
-      </ul>
+      <h2>Add Recipient</h2>
+      <form class="form" method="post" action="/recipients/create">
+        <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+        <label for="inputName" class="sr-only">Name</label>
+        <input type="text" name="name" id="inputName" class="form-control" placeholder="Name" required autofocus>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Add</button>
+      </form>
     </div>
 </div>
