--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -12,8 +12,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/recipients/index">Recipents</a></li>
-        <li><a href="/payments/index">Payments History</a></li>
+        <li><a href="/recipients/index">Recipents</a></li>
+        <li class="active"><a href="/payments/index">Payments History</a></li>
       </ul>
      
       <ul class="nav navbar-nav navbar-right">
@@ -24,12 +24,15 @@
 </nav>
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h2>Add Recipient</h2>
-      <form class="form" method="post" action="/recipients/create">
+      <h2>Make payment to <%= @recipient_name %></h2>
+      <form class="form" method="post" action="/payments/create">
         <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
-        <label for="inputName" class="sr-only">Name</label>
-        <input type="text" name="name" id="inputName" class="form-control" placeholder="Name" required autofocus>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Add</button>
+        <%= tag(:input, :type => "hidden", :name => 'recipient_id', :value => @recipient_id) %>
+        <label for="inputAmount">Amount</label>
+        <input type="number" step="any" name="amount" id="inputAmount" class="form-control" placeholder="0.00" required autofocus>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Pay</button>
       </form>
     </div>
 </div>
+
+<%= @resp %>
